用户相关基础操作-补充
